--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta and Title-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Concrete Insight's UK's Intrusive Investigations Services">
     <title>Concrete Insight UK</title>
     <link rel="icon" type="image/x-icon" href="/assets//images/s-preller-favicon.png">
+
+    <!-- Scripts and External Assets -->
     <link href="../assets/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,6 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cd5674c3b8.js" crossorigin="anonymous"></script>
+    
     <!-- Toastify -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -20,7 +26,6 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
-    <script src="https://kit.fontawesome.com/cd5674c3b8.js" crossorigin="anonymous"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!-- Header -->
@@ -32,6 +37,7 @@
             </button>
         </div>
     </div>
+    <!-- Navbar -->
     <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary p-0 text-uppercase">
         <div class="container-fluid py-0">
             <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
@@ -87,13 +93,12 @@
             </div>
         </div>
     </nav>
+
     <!-- Concrete Coring-->
-    <div class="row justify-content-center service-background pt-5">
+    <section class="row justify-content-center service-background pt-5">
         <div class="col-10 col-lg-9 col-xxl-7 service-box">
             <div class="row align-items-stretch">
-            <!-- left column split vertically -->
             <div class="col-12 col-xl-6 px-0 d-flex flex-column">
-                <!-- first half -->
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
                 <div class="text-center px-4 px-md-5">
                     <h2 class="mt-3 pt-5 pt-xl-0">Concrete Coring</h2>
@@ -101,7 +106,6 @@
                     <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 </div>
-                <!-- second half -->
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
@@ -117,7 +121,6 @@
                     </div>
                 </div>
             </div>
-            <!-- right image column (drives the row height) -->
             <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
                 src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
@@ -127,7 +130,7 @@
             </div>
             </div>
         </div>
-        <!-- Make a Query -->
+        <!-- Query Section -->
         <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
                 <h2 id="concrete-coring-query">MAKE A QUERY ABOUT CONCRETE CORING</h2>
@@ -153,12 +156,11 @@
                 </div>
             </form>
         </div>
-    </div>
+    </section>
     <!-- Dust Sampling -->
-    <div class="row justify-content-center service-background pt-5">
+    <section class="row justify-content-center service-background pt-5">
         <div class="col-10 col-lg-9 col-xxl-7 service-box">
         <div class="row align-items-stretch">
-            <!-- RIGHT column becomes FIRST -->
             <div class="d-none d-xl-block col-6 px-0 service-box-right">
             <img
                 src="../assets/images/PrellerProvidedPhotos/Carbonation Testing + Dust Sampling/carb-testing-dust-sampling-1.jpeg"
@@ -166,10 +168,7 @@
                 alt="…"
             />
             </div>
-
-            <!-- TEXT column now on the right -->
             <div class="col-12 col-xl-6 px-0 d-flex flex-column">
-                <!-- first half -->
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
                 <div class="text-center px-4 px-md-5">
                     <h2 class="mt-3 pt-5 pt-xl-0">Dust Sampling</h2>
@@ -177,7 +176,6 @@
                     <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 </div>
-                <!-- second half -->
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
@@ -195,7 +193,7 @@
             </div>
         </div>
         </div>
-        <!-- Make a Query -->
+        <!-- Query Section -->
         <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
                 <h2 id="dust-sampling-query">MAKE A QUERY ABOUT DUST SAMPLING</h2>
@@ -221,13 +219,12 @@
                 </div>
             </form>
         </div>
-    </div>
-    <div class="row justify-content-center service-background pt-5">
+    </section>
+    <!-- Concrete Breakouts -->
+    <section class="row justify-content-center service-background pt-5">
         <div class="col-10 col-lg-9 col-xxl-7 service-box">
             <div class="row align-items-stretch">
-            <!-- left column split vertically -->
             <div class="col-12 col-xl-6 px-0 d-flex flex-column">
-                <!-- first half -->
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
                 <div class="text-center px-4 px-md-5">
                     <h2 class="mt-3 pt-5 pt-xl-0">Concrete Breakouts</h2>
@@ -235,7 +232,6 @@
                     <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 </div>
-                <!-- second half -->
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
@@ -251,7 +247,6 @@
                     </div>
                 </div>
             </div>
-            <!-- right image column (drives the row height) -->
             <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
                 src="../assets/images/PrellerProvidedPhotos/Breakouts/breakouts-5.jpeg"
@@ -261,7 +256,7 @@
             </div>
             </div>
         </div>
-        <!-- Make a Query -->
+        <!-- Query Section -->
         <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
                 <h2 id="concrete-breakouts-query">MAKE A QUERY ABOUT CONCRETE BREAKOUTS</h2>
@@ -287,11 +282,11 @@
                 </div>
             </form>
         </div>
-    </div>
-    <div class="row justify-content-center service-background pt-5">
+    </section>
+    <!-- Pull Testing -->
+    <section class="row justify-content-center service-background pt-5">
         <div class="col-10 col-lg-9 col-xxl-7 service-box">
         <div class="row align-items-stretch">
-            <!-- RIGHT column becomes FIRST -->
             <div class="d-none d-xl-block col-6 px-0 service-box-right">
             <img
                 src="../assets/images/view-deserted-decaying-house-nature.jpg"
@@ -299,10 +294,7 @@
                 alt="…"
             />
             </div>
-
-            <!-- TEXT column now on the right -->
             <div class="col-12 col-xl-6 px-0 d-flex flex-column">
-                <!-- first half -->
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
                 <div class="text-center px-4 px-md-5">
                     <h2 class="mt-3 pt-5 pt-xl-0">Pull Testing</h2>
@@ -310,7 +302,6 @@
                     <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 </div>
-                <!-- second half -->
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
@@ -328,7 +319,7 @@
             </div>
         </div>
         </div>
-        <!-- Make a Query -->
+        <!-- Query Section -->
         <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
                 <h2 id="pull-testing-query">MAKE A QUERY ABOUT PULL TESTING</h2>
@@ -354,13 +345,12 @@
                 </div>
             </form>
         </div>
-    </div>
-    <div class="row justify-content-center service-background pt-5">
+    </section>
+    <!-- Half Cell Potential Surveys -->
+    <section class="row justify-content-center service-background pt-5">
         <div class="col-10 col-lg-9 col-xxl-7 service-box">
             <div class="row align-items-stretch">
-            <!-- left column split vertically -->
             <div class="col-12 col-xl-6 px-0 d-flex flex-column">
-                <!-- first half -->
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
                 <div class="text-center px-4 px-md-5">
                     <h2 class="mt-3 pt-5 pt-xl-0">Half Cell Potential Surveys</h2>
@@ -368,7 +358,6 @@
                     <p class="pb-5 pb-xl-3 pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 </div>
-                <!-- second half -->
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-4 px-md-5">
                     <p id="service-box-text" class="pb-3 pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
@@ -384,7 +373,6 @@
                     </div>
                 </div>
             </div>
-            <!-- right image column (drives the row height) -->
             <div class="d-none service-box-right d-xl-block col-6 px-0 align-content-center">
                 <img
                 src="../assets/images/PrellerProvidedPhotos/Half-Cell Potential Surveys/half-cell-potential-surveys-2.jpeg"
@@ -394,7 +382,7 @@
             </div>
             </div>
         </div>
-        <!-- Make a Query -->
+        <!-- Query Section -->
         <div class="row mt-5 py-5 px-2 px-sm-4 px-md-5 blue-gradient justify-content-center">
             <form class="col-10 col-lg-9 col-xxl-7">
                 <h2 id="half-cell-query">MAKE A QUERY ABOUT HALF CELL POTENTIAL SURVEYS</h2>
@@ -420,7 +408,7 @@
                 </div>
             </form>
         </div>
-    </div>
+    </section>
 
     <!-- Map and Footer -->
     <div id="map"></div>
@@ -438,6 +426,7 @@
             <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-instagram fa-2xl"></i></li>
         </ul>
     </footer>
+
     <!-- Post-DOM Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script type="module" src="../assets/js/script.js"></script>
